# PiDaemon

./: CMakeLists.txt
src/: main.c
